syntax = "proto3";

option go_package = "github.com/Alex-itu/Consensus_gRPC/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative [path to file, ex. proto/template.proto]


// The template service definition.
// you can call it whatever you want
service Template
{
    // one message is sent and one is recieved
    rpc Increment (Amount) returns (Ack);

    // many messages are sent and one is recieved
    rpc SayHi (stream Greeding) returns (Farewell);
}

// Amount is a type containing a string and int. They are intialized as the first and second parameter value.
message Amount {
    string clientName = 1;
    int64 value = 2;
}

message Ack {
    int64 newValue = 1;
}

message Greeding {
    string clientName = 1;
    string message = 2;
}

message Farewell {
    string message = 1;
}
